[package]
name = "duplicates"
version = "0.0.4"
authors = ["dan zwell"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "duplicates"
path = "src/main.rs"

[dependencies]
ctrlc = "3.1.9"
blake3 = { version = "0.3.7", features = ["rayon"] }
log = { version = "0.4.14", features = ["max_level_trace"] }
env_logger = "0.8.3"
multi-semaphore = { version = "0.1.1", git = "https://github.com/lefth/multi-semaphore" }
structopt = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.117"
threadpool = "1.8.1"
bytesize = "1.0.0"
memmap = "0.7.0"
anyhow = { version = "1.0.44", features = ["backtrace"] }
fallible-iterator = "0.2.0"
uuid = { version = "0.8.2", features = ["v4"] }
crossbeam-utils = "0.8.5"
globset = "0.4.8"

[dev-dependencies]
criterion = "0.3.5"

[dependencies.rusqlite]
version = "0.25.3"
features = ["bundled"]

[[bench]]
name = "my_benchmark"
harness = false
